--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=CalenderGPT
+
+
+
+#OpenAI
+openai.model=gpt-3.5-turbo
+
+openai.api.key=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
+openai.api.url=https://api.openai.com/v1/chat/completions
+openai.max-completions=1
+openai.temperature=0
