--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,18 @@
 spring.application.name=CalenderGPT
 
-
-
-#OpenAI
+# ===== OpenAI Settings =====
 openai.model=gpt-3.5-turbo
-
 openai.api.key=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
 openai.api.url=https://api.openai.com/v1/chat/completions
 openai.max-completions=1
 openai.temperature=0
+
+# ===== Spring Security OAuth2 (Google) =====
+spring.security.oauth2.client.registration.google.client-id=721672110512-un3d8157fliuntmvk94iq3r8fm4bhlae.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.scope=openid, profile, email, https://www.googleapis.com/auth/calendar
+
+
+# ===== Google API Credentials =====
+google.api.credentials.file=src/main/resources/credentials.json
