--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,9 @@ openai.temperature=0
 # ===== Spring Security OAuth2 (Google) =====
 spring.security.oauth2.client.registration.google.client-id=721672110512-un3d8157fliuntmvk94iq3r8fm4bhlae.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
-spring.security.oauth2.client.registration.google.scope=openid, profile, email, https://www.googleapis.com/auth/calendar
+spring.security.oauth2.client.registration.google.scope=openid,profile,email,https://www.googleapis.com/auth/calendar
+ar
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 
 
 # ===== Google API Credentials =====
