--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,14 @@ spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/o
 # ===== Google API Credentials =====
 google.api.credentials.file=src/main/resources/credentials.json
 
+
+# postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+#JPA properties
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
