Add user session management with UUIDs and docker compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,13 +19,13 @@ spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/o
 google.api.credentials.file=src/main/resources/credentials.json
 
 
-# postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+# Database connection (match docker-compose POSTGRES_DB)
+spring.datasource.url=jdbc:postgresql://localhost:5432/calendar_gpt
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-#JPA properties
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
+# JPA
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
