--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-			<version>3.4.4</version>
+			<version>2.5.2</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
@@ -152,12 +152,15 @@
 			<version>9.0.0.CR1</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api -->
+
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 		<dependency>
-			<groupId>jakarta.persistence</groupId>
-			<artifactId>jakarta.persistence-api</artifactId>
-			<version>3.2.0</version>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.38</version>
+			<scope>provided</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
