feat: Finalize JWT integration and fix event edit/refresh UX
- Integrated JWT authentication across frontend and backend securely
- Replaced OAuth2AuthorizedClient flow with stateless User-based JWT flow
- Updated EventService and EventController to use authenticated User context
- Fixed event edit modal to format and send datetime strings correctly
- Patched UI refresh after edit to match view event format ("dd-MM-yyyy HH:mm")
- Re-enabled guest add/remove functionality with JWT-secured endpoints
- Refactored protected JS loading to use Authorization header dynamically
- Cleaned up modal interactions and error handling in eventEditor and guestRenderer

✅ All CRUD operations now work under JWT with refreshed UI consistency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,12 +11,13 @@ openai.temperature=0
 spring.security.oauth2.client.registration.google.client-id=721672110512-un3d8157fliuntmvk94iq3r8fm4bhlae.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=openid,profile,email,https://www.googleapis.com/auth/calendar,https://www.googleapis.com/auth/contacts.readonly
-ar
+
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 
 
 # ===== Google API Credentials =====
 google.api.credentials.file=src/main/resources/credentials.json
+
 
 
 # Database connection (match docker-compose POSTGRES_DB)
@@ -29,3 +30,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+jwt.privateKeyPath=/keys/private_key.pem
+jwt.publicKeyPath=/keys/public_key.pem
+jwt.expirationMinutes=15
+
+spring.jpa.properties.hibernate.validator.apply_to_ddl=false
