added dockerfile, updated db in app.properties ready to deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,10 +21,15 @@ google.api.credentials.file=src/main/resources/credentials.json
 
 
 # Database connection (match docker-compose POSTGRES_DB)
-spring.datasource.url=jdbc:postgresql://localhost:5432/calendar_gpt
+
+spring.datasource.url=jdbc:postgresql://node128.codingbc.com:7878/bars_project
+
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+
+spring.datasource.password=Nov2017890#
+
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 
 # JPA
 spring.jpa.show-sql=true
