--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,9 @@ spring.security.oauth2.client.registration.google.client-id=721672110512-un3d815
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=openid,profile,email,https://www.googleapis.com/auth/calendar,https://www.googleapis.com/auth/contacts.readonly
 
-spring.security.oauth2.client.registration.google.redirect-uri=https://calendarchatgpt.runmydocker-app.com/login/oauth2/code/google
-app.oauth2.authorizedRedirectUris=http://localhost:3000/oauth2/redirect,http://localhost:8080/google,http://localhost:8080/googlelocal://oauth2/redirect,myiosapp://oauth2/redirect,https://api.juniorsplease.com/google
+# Spring Security OAuth2: dynamic redirect URI על־פי baseUrl
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+
 #spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 
 
