--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,8 @@ spring.datasource.username=postgres
 spring.datasource.password=Nov2017890#
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# חשוף רק את ה־health ו־info ל-web
+management.endpoints.web.exposure.include=health,info
 
 # JPA
 spring.jpa.show-sql=true
