--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,3 +45,5 @@ jwt.publicKeyPath=/keys/public_key.pem
 jwt.expirationMinutes=15
 
 spring.jpa.properties.hibernate.validator.apply_to_ddl=false
+spring.thymeleaf.enabled=false
+
