--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,7 +36,7 @@ jobs:
           head -n 2 keys/public_key.pem || true
 
       - name: Build with Maven
-        run: mvn -B clean install
+        run: mvn -B clean install -DskipTests
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
