--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,28 @@
-version: "3.3"
+version: "3.8"
 
 services:
   appserver:
     container_name: server
     image: barschtalman/calendergpt:latest
+    restart: unless-stopped
     ports:
       - "8080:8080"
     environment:
+      SPRING_PROFILES_ACTIVE: prod
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/calendar_gpt
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
+      JWT_PRIVATE_KEY_PATH: file:/keys/private_key.pem
+      JWT_PUBLIC_KEY_PATH: file:/keys/public_key.pem
     depends_on:
       - postgres
+    volumes:
+      - /opt/calendargpt/keys:/keys:ro
 
   postgres:
     image: postgres:15
     container_name: postgres-calendar
-    restart: always
+    restart: unless-stopped
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -25,6 +31,11 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d calendar_gpt"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
 volumes:
   pgdata:
