--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build with Maven
         run: mvn -B clean install -DskipTests
 
-      - name: Login to Docker Hub
+      - name: Docker login
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -44,7 +44,7 @@ jobs:
         id: meta
         run: echo "sha_tag=${{ github.sha }}" >> "$GITHUB_OUTPUT"
 
-      - name: Build and push Docker image
+      - name: Build & Push image
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -58,7 +58,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-push
     steps:
-      - name: Deploy on EC2 via SSH
+      - name: Deploy to EC2 (SSH)
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -66,13 +66,15 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script_stop: true
           script: |
-            set -e
+            set -euo pipefail
+            set -x
 
             IMAGE_NAME="${{ env.IMAGE_NAME }}"
             IMAGE_TAG="${{ needs.build-and-push.outputs.image_sha_tag }}"
             COMPOSE_DIR="${{ secrets.EC2_COMPOSE_DIR }}"
 
             echo "Deploying ${IMAGE_NAME}:${IMAGE_TAG} in ${COMPOSE_DIR}"
+
             cd "$COMPOSE_DIR"
 
             if command -v docker-compose >/dev/null 2>&1; then
@@ -81,11 +83,8 @@ jobs:
               DC="docker compose"
             fi
 
-            if grep -qE "image:\s*${IMAGE_NAME}:" docker-compose.yml; then
-              sed -i "s|image:\s*${IMAGE_NAME}:.*|image: ${IMAGE_NAME}:${IMAGE_TAG}|g" docker-compose.yml
-            else
-              sed -i "s|^\(\s*appserver:\)|\1\n    image: ${IMAGE_NAME}:${IMAGE_TAG}|g" docker-compose.yml
-            fi
+            # עדכון image בקובץ (service: appserver)
+            sed -i "s|image:\s*${IMAGE_NAME}:.*|image: ${IMAGE_NAME}:${IMAGE_TAG}|g" docker-compose.yml
 
             $DC pull appserver
             $DC up -d appserver
