--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,89 +1,58 @@
-name: Build, Push & Deploy
+name: Deploy to EC2
 
 on:
   push:
     branches:
-      - '**'
-
-env:
-  IMAGE_NAME: barschtalman/calendergpt
+      - main   # תריץ רק על main, אפשר לשנות לסניף אחר
 
 jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
-    outputs:
-      image_sha_tag: ${{ steps.meta.outputs.sha_tag }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: '17'
-          cache: maven
-
-      - name: Prepare JWT keys
-        run: |
-          mkdir -p keys
-          printf '%s\n' "${{ secrets.JWT_PRIVATE_KEY_PEM }}" > keys/private_key.pem
-          printf '%s\n' "${{ secrets.JWT_PUBLIC_KEY_PEM }}" > keys/public_key.pem
-          chmod 600 keys/private_key.pem keys/public_key.pem
-
-      - name: Build with Maven
-        run: mvn -B clean install -DskipTests
-
-      - name: Docker login
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Compute tags
-        id: meta
-        run: echo "sha_tag=${{ github.sha }}" >> "$GITHUB_OUTPUT"
-
-      - name: Build & Push image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: |
-            ${{ env.IMAGE_NAME }}:latest
-            ${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.sha_tag }}
-
   deploy:
     runs-on: ubuntu-latest
-    needs: build-and-push
+
     steps:
-      - name: Deploy to EC2 (SSH)
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Build Docker image
+        run: |
+          IMAGE_NAME=barschtalman/calendergpt
+          IMAGE_TAG=${{ github.sha }}
+          docker build -t $IMAGE_NAME:$IMAGE_TAG .
+
+      - name: Push Docker image to Docker Hub
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          IMAGE_NAME=barschtalman/calendergpt
+          IMAGE_TAG=${{ github.sha }}
+          docker push $IMAGE_NAME:$IMAGE_TAG
+
+      - name: Deploy on EC2 via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          script_stop: true
+          key: ${{ secrets.EC2_SSH_KEY }}
+          port: 22
           script: |
             set -euo pipefail
             set -x
 
-            IMAGE_NAME="${{ env.IMAGE_NAME }}"
-            IMAGE_TAG="${{ needs.build-and-push.outputs.image_sha_tag }}"
+            IMAGE_NAME="barschtalman/calendergpt"
+            IMAGE_TAG="${{ github.sha }}"
             COMPOSE_DIR="${{ secrets.EC2_COMPOSE_DIR }}"
 
             echo "Deploying ${IMAGE_NAME}:${IMAGE_TAG} in ${COMPOSE_DIR}"
 
             cd "$COMPOSE_DIR"
 
+            # בדיקה אם יש docker-compose או רק docker compose
             if command -v docker-compose >/dev/null 2>&1; then
               DC="docker-compose"
             else
               DC="docker compose"
             fi
 
-            # עדכון image בקובץ (service: appserver)
+            # עדכון ה-image ב-service
             sed -i "s|image:\s*${IMAGE_NAME}:.*|image: ${IMAGE_NAME}:${IMAGE_TAG}|g" docker-compose.yml
 
             $DC pull appserver
