--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,7 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - main   # תריץ רק על main, אפשר לשנות לסניף אחר
+      - "**"   # תריץ רק על main, אפשר לשנות לסניף אחר
 
 jobs:
   deploy:
