--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,7 @@ name: Build, Push & Deploy to EC2
 on:
   push:
     branches:
-      - "**"
+      - main
   workflow_dispatch:
 
 env:
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # בונים את ה-JAR (ללא טסטים כדי להימנע מתלות במפתחות/CI)
+      # Build JAR (ללא טסטים כדי לא להיתקע על מפתחות/CI)
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -30,7 +30,7 @@ jobs:
       - name: Build JAR with Maven (skip tests)
         run: mvn -B clean install -DskipTests
 
-      # בונים ומעלים את הדוקר
+      # Docker login + build + push (3 טאגים: SHA, גרסה מונה, latest)
       - name: Docker login (Docker Hub)
         run: |
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
@@ -47,52 +47,43 @@ jobs:
           docker push "${IMAGE_NAME}:${IMAGE_TAG_VER}"
           docker push "${IMAGE_NAME}:latest"
 
-      # דיפלוי ל-EC2
+      # Deploy ל-EC2 דרך SSH
       - name: Deploy on EC2 via SSH
         uses: appleboy/ssh-action@v1.0.3
+        env:
+          IMAGE_NAME: ${{ env.IMAGE_NAME }}
+          IMAGE_TAG_VER: ${{ env.IMAGE_TAG_VER }}
         with:
           host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.SSH_KEY }}
+          username: ${{ secrets.EC2_USER }}     # למשל ec2-user
+          key: ${{ secrets.EC2_SSH_KEY }}       # תוכן ה-PEM
           port: 22
           script_stop: true
+          envs: IMAGE_NAME,IMAGE_TAG_VER
           script: |
             set -euo pipefail
             set -x
 
-            IMAGE_NAME="${IMAGE_NAME}"
-            # בחר איזה טאג להטמיע ב-compose (כאן נשתמש בגרסת קאונטר)
-            IMAGE_TAG="${IMAGE_TAG_VER}"
-
-            # מנקים סוף-שורה/רווחים מה-secret של הנתיב
             COMPOSE_DIR="$(printf '%s' "${{ secrets.EC2_COMPOSE_DIR }}" | tr -d '\r\n' | sed -e 's/[[:space:]]*$//')"
 
-            echo "Deploying ${IMAGE_NAME}:${IMAGE_TAG} in ${COMPOSE_DIR}"
+            echo "Deploying ${IMAGE_NAME}:${IMAGE_TAG_VER} in ${COMPOSE_DIR}"
             cd "$COMPOSE_DIR" || { echo "Invalid COMPOSE_DIR: $COMPOSE_DIR"; exit 1; }
 
-            # בודקים בצורה "לא הורגת" מה מותקן: docker compose / docker-compose
-            set +e
-            docker compose version >/dev/null 2>&1
-            has_plugin=$?
-            docker-compose version >/dev/null 2>&1
-            has_v1=$?
-            set -e
-
-            if [ $has_plugin -eq 0 ]; then
+            # בודק docker compose / docker-compose
+            if command -v docker compose >/dev/null 2>&1; then
               DC="docker compose"
-            elif [ $has_v1 -eq 0 ]; then
+            elif command -v docker-compose >/dev/null 2>&1; then
               DC="docker-compose"
             else
-              echo "ERROR: docker compose/docker-compose not installed on host."
+              echo "ERROR: docker compose/docker-compose not installed."
               exit 1
             fi
 
-            # מעדכנים את התמונה ב-service: appserver
+            # עדכון image בשירות appserver
             if grep -qE "image:\s*${IMAGE_NAME}:" docker-compose.yml; then
-              sed -i "s|image:\s*${IMAGE_NAME}:.*|image: ${IMAGE_NAME}:${IMAGE_TAG}|g" docker-compose.yml
+              sed -i "s|image:\s*${IMAGE_NAME}:.*|image: ${IMAGE_NAME}:${IMAGE_TAG_VER}|g" docker-compose.yml
             else
-              # אם אין שורת image, מזריקים אחת אחרי שם השירות appserver:
-              sed -i "s|^\(\s*appserver:\)|\1\n    image: ${IMAGE_NAME}:${IMAGE_TAG}|g" docker-compose.yml
+              sed -i "s|^\(\s*appserver:\)|\1\n    image: ${IMAGE_NAME}:${IMAGE_TAG_VER}|g" docker-compose.yml
             fi
 
             $DC pull appserver
