--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
       SPRING_DATASOURCE_PASSWORD: postgres
       JWT_PRIVATE_KEY_PATH: file:/keys/private_key.pem
       JWT_PUBLIC_KEY_PATH: file:/keys/public_key.pem
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
+      GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
+      GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
     depends_on:
       - postgres
     volumes:
