--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,3 +47,11 @@ jwt.expirationMinutes=15
 spring.jpa.properties.hibernate.validator.apply_to_ddl=false
 spring.thymeleaf.enabled=false
 
+
+springdoc.api-docs.path=/api/v3/api-docs
+springdoc.swagger-ui.path=/api/swagger-ui
+springdoc.swagger-ui.config-url=/api/v3/api-docs/swagger-config
+springdoc.swagger-ui.url=/api/v3/api-docs
+
+server.forward-headers-strategy=framework
+
