--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,4 +55,5 @@ springdoc.swagger-ui.config-url=/api/v3/api-docs/swagger-config
 springdoc.swagger-ui.url=/api/v3/api-docs
 
 server.forward-headers-strategy=framework
-
+server.tomcat.remote-ip-header=x-forwarded-for
+server.tomcat.protocol-header=x-forwarded-proto
