--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_
 spring.security.oauth2.client.registration.google.scope=openid,profile,email,https://www.googleapis.com/auth/calendar,https://www.googleapis.com/auth/contacts.readonly
 
 # Spring Security OAuth2: dynamic redirect URI על־פי baseUrl
-#spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/api/login/oauth2/code/{registrationId}
-spring.security.oauth2.client.registration.google.redirect-uri=https://calendargpt.org/api/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/api/login/oauth2/code/{registrationId}
+#spring.security.oauth2.client.registration.google.redirect-uri=https://calendargpt.org/api/login/oauth2/code/{registrationId}
 
 
 #spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
