fix(oauth2): implement /api/auth/google/login + use POST_LOGIN_NEXT cookie in success handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,3 +59,4 @@ server.forward-headers-strategy=framework
 server.tomcat.remoteip.remote-ip-header = X-Forwarded-For
 server.tomcat.remoteip.protocol-header   = CloudFront-Forwarded-Proto
 server.tomcat.remoteip.host-header       = Host
+server.servlet.session.cookie.secure=true 
